--- a/index.html
+++ b/index.html
@@ -278,6 +278,8 @@
         background: rgb(240,240,240);
         border-bottom-left-radius: 16px;
         border-bottom-right-radius: 16px;
+        flex-wrap: wrap;
+        overflow: hidden
       }
       .transfer .transfer-details>*{
         flex: 1
