--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       .app-toolbar{
         position: sticky;
         top: 88px;
-        background: #e6c200;
+        background: #cdac00;
         display: flex;
         flex-direction: row;
         align-items: center;
