--- a/login.html
+++ b/login.html
@@ -136,6 +136,7 @@
         border-radius: 16px;
         box-sizing: border-box;
         width: 100%;
+        max-width: 1020px;
       }
       .card-list{
         border-radius: 16px;
